--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
     <!-- css animation -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-    <title>Jahangirnagar University</title>
+    <title>TeachEdu University</title>
 </head>
 
 <body>
 
     <!-- header start -->
-    <header class="container-fluid">
+    <header class="container">
         <!-- Top header start -->
-        <div class="row top-header">
+        <div class="my-3 mx-auto row top-header">
             <div class="col-md-6">
-                <img class="img-fluid" src="./images/logo-ju.png" alt="">
+                <img class="img-fluid" src="./image/logo.png" alt="">
             </div>
             <div class="col-md-6 contact">
                 <div>
                     <p><i class="fas fa-phone"></i> 02224491045-51 </p>
                     <p><i class="fas fa-fax"></i> Fax: 02224491052</p>
-                    <p><i class="fas fa-envelope"></i> registrar@juniv.edu</p>
+                    <p><i class="fas fa-envelope"></i> registrar@teced.edu</p>
                 </div>
                 <!-- contact navbar start-->
                 <nav class="contact-nav">
@@ -52,7 +52,7 @@
         <!-- main navbar start -->
         <div>
             <nav class="navbar navbar-expand-lg navbar-light nav-bg">
-                <div class="container-fluid">
+                <div class="mx-auto container">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -192,34 +192,6 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown"
                                     role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Admission
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown"
-                                    role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Library
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown"
-                                    role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Journals
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -240,7 +212,7 @@
 
         <!-- main header start -->
         <div>
-            <div class="row mt-3">
+            <div class="mx-auto row mt-3">
                 <div class="col-md-2">
                     <div class="versity-about">
                         <span class="logo"><i class="far fa-lightbulb"></i></span>
@@ -262,50 +234,54 @@
 
                 <!-- Top banner carosel start-->
                 <div class="col-md-7">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                                class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                                aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                                aria-label="Slide 3"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-                                aria-label="Slide 4"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-                                aria-label="Slide 5"></button>
-                        </div>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="./images/card-1.jpg" class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h4>জাহাঙ্গীরনগর বিশ্ববিদ্যালয় দিবস পালিত</h4>
+
+                    <div>
+                        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-indicators">
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                    class="active" aria-current="true" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                    aria-label="Slide 2"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                    aria-label="Slide 3"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                                    aria-label="Slide 4"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                                    aria-label="Slide 5"></button>
+                            </div>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="./image/banner_1.png" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h4>Teach Ed University</h4>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./image/banner_2.png" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./image/banner_3.png" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./image/banner_1.png" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./image/banner_3.png" class="d-block w-100" alt="...">
                                 </div>
                             </div>
-                            <div class="carousel-item">
-                                <img src="./images/card-2.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="./images/card-3.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="./images/card-2.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="./images/card-3.jpg" class="d-block w-100" alt="...">
-                            </div>
+                            <button class="carousel-control-prev" type="button"
+                                data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button"
+                                data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
                     </div>
+
                 </div>
                 <!-- Top banner carosel end -->
 
@@ -313,10 +289,10 @@
                 <div class="col-md-3">
 
                     <div class="vc-card">
-                        <img src="./images/vc-photo.jpg" alt="">
-                        <h5 class="card-title pt-3">Professor Dr. Farzana Islam</h5>
+                        <img src="./image/vc.png" alt="">
+                        <h5 class="card-title pt-3">Professor Dr. Robart Adison</h5>
                         <h6>Vice Chancellor</h6>
-                        <p class="card-text">Welcome to <b>Jhangirnagar University!</b> People from all walks of
+                        <p class="card-text">Welcome to <b>Teach Edu University!</b> People from all walks of
                             life have been visiting us for...</p>
                     </div>
                     <!-- <div class="vc-card">
@@ -337,16 +313,21 @@
         <!-- main header end -->
 
         <!-- slide animition -->
-
+        <marquee class="my-5 marque-slider" width="100%" direction="left" height="60px">
+            <div class="pt-3">
+                <span class="fw-bold text-danger">Wellcome Teach Edu University</span>
+                <span class="fw-bold text-danger">Wellcome Teach Edu University</span>
+            </div>
+        </marquee>
         <!-- slide animition -->
     </header>
     <!-- header end -->
 
     <!-- main start -->
-    <main class="container-fluid">
-        <div class="mt-5 text-center">
-            <img src="./images/20-21.jpg" alt="">
-            <button class="click-here-button">CLICK HERE <i class="fas fa-chevron-right"></i><i
+    <main class="container">
+        <div class="text-center">
+            <img src="./image/logo.png" alt="">
+            <button class="click-here-button ms-3">CLICK HERE <i class="fas fa-chevron-right"></i><i
                     class="fas fa-chevron-right"></i></button>
         </div>
         <!-- university description start -->
@@ -441,7 +422,7 @@
         </div>
         <!-- FACULTIES & DEPARTMENTS Information -->
         <div>
-            <div class="faculties my-3">
+            <div class="faculties my-5">
                 <div class="text-center">
                     <h3 class="py-2">FACULTIES & DEPARTMENTS</h3>
                 </div>
@@ -449,7 +430,7 @@
             <!-- All Departments -->
             <div>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 mb-4">
                         <div class="all-departments">
                             <h5 class="pb-3">Faculty of Arts & Humanities</h5>
                             <p><i class="fas fa-graduation-cap"></i> Department of International Relations</p>
@@ -463,7 +444,7 @@
                             <p><i class="fas fa-graduation-cap"></i> Department of International Relations</p>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 mb-4">
                         <div class="all-departments">
                             <h5 class="pb-3">Faculty of Mathematical & Physical Sciences</h5>
                             <p><i class="fas fa-graduation-cap"></i> Department of International Relations</p>
@@ -477,7 +458,7 @@
                             <p><i class="fas fa-graduation-cap"></i> Department of International Relations</p>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 mb-4">
                         <div class="all-departments">
                             <h5 class="pb-3">Faculty of Social Sciences</h5>
                             <p><i class="fas fa-graduation-cap"></i> Department of International Relations</p>
@@ -524,7 +505,7 @@
         </div>
         <!-- INSTITUTES -->
         <div>
-            <div class="faculties my-4">
+            <div class="faculties my-5">
                 <div class="text-center">
                     <h3 class="py-2">INSTITUTES</h3>
                 </div>
@@ -547,7 +528,7 @@
         </div>
         <!-- FEATURE ARTICLE -->
         <div>
-            <div class="faculties my-4">
+            <div class="faculties my-5">
                 <div class="text-center">
                     <h3 class="py-2">FEATURE ARTICLE</h3>
                 </div>
@@ -557,25 +538,25 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="article-card">
-                            <img class="img-fluid" src="./images/card-1.jpg" alt="">
-                            <p class="pt-5 text-center">সেলিম আল দীনের প্রয়াণ দিবস পালিত </p>
+                            <img class="img-fluid" src="./image/features-01.png" alt="">
+                            <p class="pt-5 text-center">University Day-2022</p>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="article-card">
-                            <img class="img-fluid" src="./images/card-2.jpg" alt="">
-                            <p class="pt-5 text-center">জাহাঙ্গীরনগর বিশ্ববিদ্যালয় দিবস পালিত </p>
+                            <img class="img-fluid" src="./image/features-02.png" alt="">
+                            <p class="pt-5 text-center">University Rag Day-2022</p>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="article-card">
-                            <img class="img-fluid" src="./images/card-3.jpg" alt="">
+                            <img class="img-fluid" src="./image/features-03.png" alt="">
                             <p class="pt-5 text-center">Press note on IIT establishment day program, 2022 </p>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="article-card">
-                            <img class="img-fluid" src="./images/card-4.jpg" alt="">
+                            <img class="img-fluid" src="./image/features-01.png" alt="">
                             <p class="pt-5 text-center">বিভিন্ন কর্মসূচির মধ্যদিয়ে স্বাধীনতার সুবর্ণজয়ন্তী ও মুজিববর্ষ
                                 পালন </p>
                         </div>
@@ -619,7 +600,7 @@
                     <p><i class="fas fa-chevron-right"></i><i class="fas fa-chevron-right"></i> Contact</p>
                 </div>
                 <div class="col-md-3 footer-link">
-                    <img class="mt-5" src="./images/footer-logo.png" alt="">
+                    <img class="mt-5" src="./image/logo.png" alt="">
                     <div class="icon">
                         <small><i class="fab fa-facebook"></i></small>
                         <small><i class="fab fa-twitter"></i></small>
@@ -631,9 +612,9 @@
                 </hr>
 
                 <div class="footer-contact my-4">
-                    <p>Jahangirnagar University, Savar, Dhaka-1342, Bangladesh. Telephone: PABX:02224491045-51 ,
-                        Fax:02224491052 </p>
-                    <p>© 2022 Jahangirnagar University</p>
+                    <p>Teach Edu University, Dhaka-1342, Bangladesh. Telephone: PABX:022244463-51 ,
+                        Fax:022244634 </p>
+                    <p>© 2022 Teach Edu University</p>
                 </div>
 
             </div>
