--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <!-- css animation -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
     <title>TeachEdu University</title>
 </head>
 
@@ -216,7 +215,7 @@
                 <div class="col-md-2">
                     <div class="versity-about">
                         <span class="logo"><i class="far fa-lightbulb"></i></span>
-                        <h6>ABOUT JU</h6>
+                        <h6>ABOUT EDU</h6>
                     </div>
                     <div class="versity-about mt-2">
                         <span class="logo"><i class="fas fa-users"></i></span>
@@ -534,35 +533,84 @@
                 </div>
             </div>
             <!-- All FEATURE ARTICLE -->
-            <div>
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="article-card">
+
+
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active text-center feature-slider">
+                        <div>
                             <img class="img-fluid" src="./image/features-01.png" alt="">
-                            <p class="pt-5 text-center">University Day-2022</p>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3 class="fw-bold">University Day-2022</h3>
+                            </div>
+                            <!-- <p class="pt-5 text-center">University Day-2022</p> -->
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="article-card">
+                    <div class="carousel-item text-center feature-slider">
+                        <div>
                             <img class="img-fluid" src="./image/features-02.png" alt="">
-                            <p class="pt-5 text-center">University Rag Day-2022</p>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3 class="fw-bold">University Day-2022</h3>
+                            </div>
+                            <!-- <p class="pt-5 text-center">University Day-2022</p> -->
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="article-card">
+                    <div class="carousel-item text-center feature-slider">
+                        <div>
                             <img class="img-fluid" src="./image/features-03.png" alt="">
-                            <p class="pt-5 text-center">Press note on IIT establishment day program, 2022 </p>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="fw-bold">Press note on IIT establishment day program, 2022</h5>
+                            </div>
+                            <!-- <p class="pt-5 text-center">University Day-2022</p> -->
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="article-card">
-                            <img class="img-fluid" src="./image/features-01.png" alt="">
-                            <p class="pt-5 text-center">বিভিন্ন কর্মসূচির মধ্যদিয়ে স্বাধীনতার সুবর্ণজয়ন্তী ও মুজিববর্ষ
-                                পালন </p>
+                    <div class="carousel-item text-center feature-slider">
+                        <div>
+                            <img class="img-fluid" src="./image/features-02.png" alt="">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>বিভিন্ন কর্মসূচির মধ্যদিয়ে স্বাধীনতার <br></br> সুবর্ণজয়ন্তী ও
+                                    মুজিববর্ষ
+                                    পালন</h5>
+                            </div>
+                            <!-- <p class="pt-5 text-center">University Day-2022</p> -->
                         </div>
                     </div>
                 </div>
             </div>
+
+            <!-- <div class="animate__animated animate__slideInLeft animate__delay-0.5s">
+                <div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="article-card">
+                                <img class="img-fluid" src="./image/features-01.png" alt="">
+                                <p class="pt-5 text-center">University Day-2022</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="article-card">
+                                <img class="img-fluid" src="./image/features-02.png" alt="">
+                                <p class="pt-5 text-center">University Rag Day-2022</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="article-card">
+                                <img class="img-fluid" src="./image/features-03.png" alt="">
+                                <p class="pt-5 text-center">Press note on IIT establishment day program, 2022 </p>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="article-card">
+                                <img class="img-fluid" src="./image/features-01.png" alt="">
+                                <p class="pt-5 text-center">বিভিন্ন কর্মসূচির মধ্যদিয়ে স্বাধীনতার সুবর্ণজয়ন্তী ও
+                                    মুজিববর্ষ
+                                    পালন </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+
         </div>
         <!-- view all -->
         <div class="my-4 view-all">
